# rray

./: .gitignore  Cargo.toml  README.md  example.json
src/: image.rs  main.rs
src/image/: ray.rs
src/image/ray/: color.rs  vec3.rs
