[package]
name = "rray"
version = "0.1.0"
authors = ["Tanguy Michardière <tanguy.michardiere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
rayon = "1.3.1"
indicatif = { version = "0.15.0", features = ["with_rayon"] }
png = "0.16.5"
rand = "0.7.3"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
